--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <ImageView
-                android:id="@+id/movieImageIDDets"
+                android:id="@+id/pokeImgDet"
                 android:background="@android:color/background_dark"
                 android:layout_width="90dp"
                 android:layout_height="90dp"/>
@@ -33,14 +33,14 @@
                 android:textSize="15sp"
                 android:textStyle="bold"
                 android:text="Pokemon"
-                android:layout_toRightOf="@id/movieImageIDDets"
+                android:layout_toRightOf="@id/pokeImgDet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/pokeSpeciesDet"
                 android:padding="5dp"
-                android:layout_toRightOf="@id/movieImageIDDets"
+                android:layout_toRightOf="@id/pokeImgDet"
                 android:text="Species: "
                 android:layout_below="@id/pokeTitleDet"
                 android:layout_width="wrap_content"
@@ -52,7 +52,7 @@
                 android:text="Types: "
                 android:paddingLeft="5dp"
                 android:layout_below="@+id/pokeSpeciesDet"
-                android:layout_toRightOf="@id/movieImageIDDets"
+                android:layout_toRightOf="@id/pokeImgDet"
                 android:layout_centerHorizontal="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
